--- a/Klike/Interfaces/ActivityEventGroup.xib
+++ b/Klike/Interfaces/ActivityEventGroup.xib
@@ -47,7 +47,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmc-fr-FFp">
-                        <rect key="frame" x="112" y="39" width="174" height="14"/>
+                        <rect key="frame" x="112" y="39" width="193" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -77,10 +77,10 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="c9K-Ja-JpO"/>
                                 <exclude reference="PMa-yK-bf7"/>
-                                <exclude reference="wco-un-23N"/>
                                 <exclude reference="YcQ-Ol-RAt"/>
+                                <exclude reference="c9K-Ja-JpO"/>
+                                <exclude reference="wco-un-23N"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -97,9 +97,9 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="5z1-kh-8Oh"/>
+                                <exclude reference="Mx4-YS-dKE"/>
                                 <exclude reference="NMb-cp-64R"/>
                                 <exclude reference="u34-Qm-fTu"/>
-                                <exclude reference="Mx4-YS-dKE"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -115,10 +115,10 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="fAc-er-9uh"/>
-                                <exclude reference="U3W-QQ-fDO"/>
                                 <exclude reference="8Nv-NE-KWC"/>
+                                <exclude reference="U3W-QQ-fDO"/>
                                 <exclude reference="VnK-hD-GcR"/>
+                                <exclude reference="fAc-er-9uh"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -135,9 +135,9 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="3js-ed-Twq"/>
-                                <exclude reference="U1h-UK-vgW"/>
                                 <exclude reference="JVT-Iz-85q"/>
                                 <exclude reference="Mqb-c1-LJ7"/>
+                                <exclude reference="U1h-UK-vgW"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -154,9 +154,9 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="05O-24-VZt"/>
-                                <exclude reference="Rs6-Ii-Kgf"/>
-                                <exclude reference="O4T-sc-Nq4"/>
                                 <exclude reference="Cc9-pQ-pCe"/>
+                                <exclude reference="O4T-sc-Nq4"/>
+                                <exclude reference="Rs6-Ii-Kgf"/>
                             </mask>
                         </variation>
                     </imageView>
@@ -188,7 +188,7 @@
                     <constraint firstItem="vTI-09-sFR" firstAttribute="leading" secondItem="2v9-47-bGm" secondAttribute="trailing" constant="24" id="djb-Ml-JkF"/>
                     <constraint firstAttribute="trailing" secondItem="s80-KQ-LLc" secondAttribute="trailing" id="eHf-re-eXR"/>
                     <constraint firstItem="Z9m-Ab-RuJ" firstAttribute="leading" secondItem="rPk-z7-9Og" secondAttribute="trailing" constant="15" id="eLD-rB-lfQ"/>
-                    <constraint firstItem="1y4-88-3ne" firstAttribute="leading" secondItem="dmc-fr-FFp" secondAttribute="trailing" constant="5" id="fpf-cb-TCW"/>
+                    <constraint firstItem="1y4-88-3ne" firstAttribute="trailing" secondItem="dmc-fr-FFp" secondAttribute="trailing" id="fpf-cb-TCW"/>
                     <constraint firstItem="2v9-47-bGm" firstAttribute="leading" secondItem="acZ-Gy-ucJ" secondAttribute="trailing" constant="24" id="hFz-Rb-CAX"/>
                     <constraint firstItem="1y4-88-3ne" firstAttribute="trailing" secondItem="Uh0-M6-7aV" secondAttribute="trailing" id="j26-Rb-euD"/>
                     <constraint firstAttribute="bottom" secondItem="XkX-yf-Lb3" secondAttribute="bottom" id="mN3-9H-Clp"/>
