--- a/Klike/Interfaces/InviteCell.xib
+++ b/Klike/Interfaces/InviteCell.xib
@@ -28,13 +28,13 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lCU-mu-fLc">
-                        <rect key="frame" x="291" y="11" width="14" height="14"/>
+                        <rect key="frame" x="291" y="13" width="14" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" red="0.71372549019607845" green="0.71372549019607845" blue="0.73333333333333328" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXg-2l-w06">
-                        <rect key="frame" x="79" y="7" width="207" height="19"/>
+                        <rect key="frame" x="79" y="9" width="207" height="19"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -47,7 +47,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hM-cU-rgh">
-                        <rect key="frame" x="112" y="37" width="174" height="14"/>
+                        <rect key="frame" x="112" y="37" width="193" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -55,11 +55,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="4JH-DL-1M7" firstAttribute="top" secondItem="ls5-4p-dai" secondAttribute="top" id="0Pc-vP-Pmz"/>
-                    <constraint firstItem="1eE-Mx-deh" firstAttribute="top" secondItem="fXg-2l-w06" secondAttribute="bottom" constant="6" id="3i4-Cs-fzb"/>
                     <constraint firstAttribute="trailing" secondItem="lCU-mu-fLc" secondAttribute="trailing" constant="15" id="E5O-tI-p20"/>
                     <constraint firstAttribute="trailing" secondItem="wsg-gh-zHD" secondAttribute="trailing" id="ED3-an-pio"/>
                     <constraint firstItem="4JH-DL-1M7" firstAttribute="leading" secondItem="ls5-4p-dai" secondAttribute="leading" id="Gv6-Vf-hcc"/>
-                    <constraint firstItem="lCU-mu-fLc" firstAttribute="leading" secondItem="2hM-cU-rgh" secondAttribute="trailing" constant="5" id="MEe-nZ-vrC"/>
+                    <constraint firstItem="lCU-mu-fLc" firstAttribute="trailing" secondItem="2hM-cU-rgh" secondAttribute="trailing" id="MEe-nZ-vrC"/>
                     <constraint firstItem="fXg-2l-w06" firstAttribute="leading" secondItem="4JH-DL-1M7" secondAttribute="trailing" constant="15" id="NDD-4c-znS"/>
                     <constraint firstItem="wsg-gh-zHD" firstAttribute="top" secondItem="4JH-DL-1M7" secondAttribute="bottom" id="VTn-1p-TlU"/>
                     <constraint firstItem="wsg-gh-zHD" firstAttribute="top" secondItem="1eE-Mx-deh" secondAttribute="bottom" constant="8" id="bsV-VP-yIX"/>
@@ -71,6 +70,7 @@
                     <constraint firstItem="lCU-mu-fLc" firstAttribute="baseline" secondItem="fXg-2l-w06" secondAttribute="baseline" id="mdB-wJ-hNu"/>
                     <constraint firstItem="2hM-cU-rgh" firstAttribute="leading" secondItem="1eE-Mx-deh" secondAttribute="trailing" constant="7" id="otP-g4-91V"/>
                     <constraint firstItem="2hM-cU-rgh" firstAttribute="centerY" secondItem="1eE-Mx-deh" secondAttribute="centerY" id="tZw-si-Zeq"/>
+                    <constraint firstItem="fXg-2l-w06" firstAttribute="top" secondItem="ls5-4p-dai" secondAttribute="top" constant="9" id="yId-zM-D5O"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
