--- a/Klike/Sources/Controllers/KLEventGalleryCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,6 +15,17 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jM8-vB-YIc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRm-OQ-cAi">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                                <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
+                                <state key="normal" title="Add Photos" image="event_galery_plus">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onAddPhotos:" destination="e1a-EF-CfJ" eventType="touchUpInside" id="Ggh-0w-Xn8"/>
+                                </connections>
+                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QCX-LY-88o">
                                 <rect key="frame" x="0.0" y="7" width="320" height="74"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -35,12 +46,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="bRm-OQ-cAi" firstAttribute="leading" secondItem="jM8-vB-YIc" secondAttribute="leading" id="382-3i-1xY"/>
+                            <constraint firstAttribute="trailing" secondItem="bRm-OQ-cAi" secondAttribute="trailing" id="8P9-75-4eZ"/>
                             <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" constant="7" id="CWV-Jx-EcF"/>
                             <constraint firstItem="QCX-LY-88o" firstAttribute="top" secondItem="jM8-vB-YIc" secondAttribute="top" constant="7" id="NDf-1U-M8o"/>
                             <constraint firstAttribute="height" priority="999" constant="88" id="RNv-TI-Lvd"/>
                             <constraint firstItem="QCX-LY-88o" firstAttribute="leading" secondItem="jM8-vB-YIc" secondAttribute="leading" id="XkL-5j-x8K"/>
+                            <constraint firstAttribute="bottom" secondItem="bRm-OQ-cAi" secondAttribute="bottom" id="ieD-9C-dRH"/>
                             <constraint firstAttribute="trailing" secondItem="QCX-LY-88o" secondAttribute="trailing" id="pZ8-By-9QI"/>
                             <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" constant="7" id="w4E-b7-jZu"/>
+                            <constraint firstItem="bRm-OQ-cAi" firstAttribute="top" secondItem="jM8-vB-YIc" secondAttribute="top" id="z0N-HW-ciY"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -65,9 +80,13 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="_buttonAddPhotos" destination="bRm-OQ-cAi" id="0Gg-4d-kDJ"/>
                 <outlet property="_collection" destination="QCX-LY-88o" id="B9V-aS-mpP"/>
             </connections>
-            <point key="canvasLocation" x="175" y="334"/>
+            <point key="canvasLocation" x="288" y="309"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="event_galery_plus" width="25" height="24"/>
+    </resources>
 </document>
