--- a/Klike/Interfaces/ActivityEvent.xib
+++ b/Klike/Interfaces/ActivityEvent.xib
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                         <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="64" id="HR9-so-mk8"/>
+                            <constraint firstAttribute="height" priority="999" constant="64" id="HR9-so-mk8"/>
                             <constraint firstAttribute="width" constant="64" id="Ti1-Aw-Iua"/>
                         </constraints>
                     </imageView>
