--- a/Klike/Interfaces/InviteCell.xib
+++ b/Klike/Interfaces/InviteCell.xib
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                         <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="64" id="2LM-N7-BzM"/>
+                            <constraint firstAttribute="height" priority="999" constant="64" id="2LM-N7-BzM"/>
                             <constraint firstAttribute="width" constant="64" id="5Id-hg-frv"/>
                         </constraints>
                     </imageView>
