--- a/Klike/Interfaces/PayedPricingView.xib
+++ b/Klike/Interfaces/PayedPricingView.xib
@@ -79,7 +79,7 @@
                     <rect key="frame" x="16" y="194" width="289" height="71"/>
                     <attributedString key="attributedText">
                         <fragment>
-                            <string key="content">Payments will be accepted in a day after the start of your event then we’ll payout to your bank account 2 business days later. Klike takes a 2% comission for processing. </string>
+                            <string key="content">Payments will be accepted in a day after the start of your event then we’ll payout to your bank account 2 business days later. Konvene takes a 2% comission for processing. </string>
                             <attributes>
                                 <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <font key="NSFont" size="12" name="HelveticaNeue"/>
